2013-09-04  Dario Rodriguez <dario@artica.es>

	* operation/leads/lead_detail.php: Fixed a wrong
	inizialization of owner value for lead filter of search
	form. The current user as owner breaks all usability.

2013-09-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/grupos/lista_grupos.php: Fixed the alignment of
	the search table elements. The groups table is now in a
	function.
	
	* include/functions_groups.php: Added function
	"print_groups_table", that contains the groups table.

2013-09-03  Sancho Lerena <slerena@artica.es>

	* operation/invoices/invoice_detail.php,
	operation/leads/lead_detail.php,
	operation/contracts/contract_detail.php,
	operation/companies/company_role.php: Small fixes
	and formatting changes. Nothing serious.

2013-09-03  Dario Rodriguez <dario@artica.es>

	* include/ajax/calendar.php,
	include/functions_calendar.php,
	operation/side_menu.php,
	operation/user_report/holidays_calendar.php: New 
	calendar to show holidays of users.

	* operation/agenda/agenda.php: Deleted some debug
	traces and improved calendar visualization.

2013-09-03  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css: Created new style for
	calendar legend.
	* include/js/fullcalendar: new library to generate
	agenda calendar.
	* include/ajax/calendar.php,
	include/functions_calendar.php,
	operation/agenda/agenda.php: Developed a new calendar
	view using the new library.

2013-09-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/workorders/wo.php: Now is possible to filter
	workorders by project.

2013-09-03  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/ajax/remote_validations.php: Fixed an error on a
	validation that does not return anything.
	
	* include/ajax/users.php: Now this file can return the
	company id of an user via ajax.
	
	* operation/side_menu.php: Now the workorder listing is
	filtered by default by the actual user as the owner.
	